add native configuration